--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=
     , initial-scale=1.0"
     />
-    <link rel="stylesheet" href="./dom checkpoint.css" />
+    <link rel="stylesheet" href="./css/dom checkpoint.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
