--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <i class="far fa-heart"></i>
           </p>
         </div>
-        <img src="../dom and js/resources/Pull.jpg" alt="pull" width="200" />
+        <img src="/resources/Pull.jpg" alt="pull" width="200" />
         <div class="pullover">
           <br />
           <h3>Pullover Drawstrings Hoodies</h3>
